[package]
name = "toy-os-rs"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"


[package.metadata.bootimage]
default-target = "x86_64-toy-os.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.3"
rand = { version = "0.6", default-features = false }

[dev-dependencies]
pretty_assertions = "0.5"